FInish part1 requirements for exercise

--- a/templates/edit_form.html
+++ b/templates/edit_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Add User{%
+{% extends 'base.html' %} {% block title %}Edit User{%
 endblock %} {% block content %}
 <form id="new-user-form" class="user-form mt-4" action="/users/{{user.id}}/edit" method="POST">
     <div class="form-group">
