--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,13 +14,24 @@ endblock %} {% block content %}
         <div class="row d-flex flex-column ml-2">
             <h2>{{user.get_full_name()}}</h2>
             <div class="row d-flex ml-1">
-                <a class="btn btn-primary" href="/users/{{user.id}}/edit">Edit</a>
+                <a class="btn btn-sm btn-primary" href="/users/{{user.id}}/edit">Edit</a>
                 <form action="/users/{{user.id}}/delete" class="ml-2" method="POST">
-                    <button type="submit" class="btn btn-outline-danger">Delete</button>
+                    <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
                 </form>
+            </div>
+            <div class="mt-3">
+                <h3>Posts</h3>
+                <ul>
+                    {% for post in user.posts %}
+                    <li><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+                    {% endfor %}
+                </ul>
+                <a class="btn btn-sm btn-primary" href="/users/{{user.id}}/posts/new">Add Post</a>
             </div>
         </div>
     </div>
+
+
 </div>
 
 
