--- a/templates/add_post_form.html
+++ b/templates/add_post_form.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block title %}Add Post for {{user.get_full_name()}}{%
-endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}Add Post for {{user.get_full_name()}}{% endblock %} {% block content %}
 <form id="new-post-form" class="post-form mt-4" action="/users/{{user.id}}/posts/new" method="POST">
     <div class="form-group">
         <label for="title">Title</label>
@@ -7,7 +6,18 @@ endblock %} {% block content %}
     </div>
     <div class="form-group">
         <label for="content">Content</label>
-        <textarea class="form-control" id="content" name='content' rows="8"></textarea>
+        <textarea class="form-control" id="content" name='content' rows="4"></textarea>
+    </div>
+    <div class="tag-select mb-3">
+        {% for tag in tags %}
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="{{tag.id}}" id="tag-{{tag.id}}" name="tags">
+            <label class="form-check-label" for="tags">
+              {{tag.name}}
+            </label>
+        </div>
+
+        {% endfor %}
     </div>
 
     <button type="submit" class="btn btn-primary">Add</button>
