--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -1,17 +1,21 @@
-{% extends 'base.html' %} {% block title %}{{post.title}}{%
-    endblock %} {% block content %}
-    
-    <p>
-        {{post.content}}
-    </p>
-    <p class="font-italic mb-0">Author: {{post.user.get_full_name()}}</p>
-    <p class="font-italic">Created: {{post.show_est_formatted_date()}}</p>
-    <div class="row d-flex ml-1">
-        <a class="btn btn-sm btn-outline-primary" href="/users/{{post.user.id}}">Cancel</a>
-        <a class="btn btn-sm btn-primary mx-1" href="/posts/{{post.id}}/edit">Edit</a>
-        <form action="/posts/{{post.id}}/delete" method="POST">
-            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-        </form>
-    </div>
-    
-    {% endblock %}
+{% extends 'base.html' %} {% block title %}{{post.title}}{% endblock %} {% block content %}
+
+<p>
+    {{post.content}}
+</p>
+<p class="font-italic mb-0">Author: <a href="/users/{{post.user.id}}">{{post.user.get_full_name()}}</a></p>
+<p class="font-italic">Created: {{post.show_est_formatted_date()}}</p>
+<div class="row d-flex ml-1 mb-2">
+    <h5>Tags:</h5>
+    {% for tag in post.tags %}
+    <a class="mx-1" href="/tags/{{tag.id}}"><span class="badge badge-primary">{{tag.name}}</span></a> {% endfor %}
+</div>
+<div class="row d-flex ml-1">
+    <a class="btn btn-sm btn-outline-primary" href="/users/{{post.user.id}}">Cancel</a>
+    <a class="btn btn-sm btn-primary mx-1" href="/posts/{{post.id}}/edit">Edit</a>
+    <form action="/posts/{{post.id}}/delete" method="POST">
+        <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+    </form>
+</div>
+
+{% endblock %}
